# rust-projek-kecil2

./: .env  .gitignore  Cargo.toml  README.md  config.rs  diesel.toml
migrations/2025-02-09-021430_create_product/: up.sql
src/: config.rs  database.rs  handlers.rs  lib.rs  main.rs  middlewares.rs  model.rs  request.rs  router.rs  shutdown.rs
